# CEIA-aprendizaje_de_maquina_2

./: --date=short  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  GUIDELINES.md  README.md  TODO.md  docker-compose.yaml  pyproject.toml
airflow/dags/: etl_movielens.py  retrain_movielens.py  train_movielens.py
airflow/secrets/: connections.json  variables.json
data/: .gitignore
dockerfiles/airflow/: Dockerfile  bootstrap.sh  requirements.txt
dockerfiles/fastapi/: .dockerignore  Dockerfile  app.py  requirements.txt
docs/: PIPELINE.md
modelo/: README.md  movielens_project.ipynb
modelo/src/: etl.py  movielens_data.py  predict.py  requirements.txt  train.py
src/: retrain_core.py
tests/: conftest.py  test_etl_dag.py  test_fastapi_predict.py  test_retrain_dag.py  test_retrain_movielens_dag.py  test_train_dag.py
